@@ -241,6 +241,11 @@ hextorio-item-buff-cost-scale=Item Buff Cost Scale
 hextorio-item-buff-cost-base=Item Buff Cost Base
 hextorio-title-screen-music=Title Screen Music
 hextorio-trade-flying-text=Trade Flying Text
+hextorio-default-nauvis-hexlight-color=[planet=nauvis] Default Hexlight Color
+hextorio-default-vulcanus-hexlight-color=[planet=vulcanus] Default Hexlight Color
+hextorio-default-fulgora-hexlight-color=[planet=fulgora] Default Hexlight Color
+hextorio-default-gleba-hexlight-color=[planet=gleba] Default Hexlight Color
+hextorio-default-aquilo-hexlight-color=[planet=aquilo] Default Hexlight Color
 
 [mod-setting-description]
 hextorio-claimed-hex-tile=The tile used to pave over claimed hexes.
@@ -362,6 +367,11 @@ hextorio-default-trade-quality=Upon claiming a hex core, the quality bounds for 
 hextorio-item-buff-cost-scale=The multiplier of the item's value that is used as the cost for unlocking that item's buffs in the catalog.
 hextorio-item-buff-cost-base=The base of exponentiation used to scale the value beyond the unlock cost to obtain the enhancement cost of an item's buffs.\n\nSmall changes to this number from the default value strongly affects the balancing of the game.
 hextorio-trade-flying-text=Whether to emit flying text for a trade that just completed.
+hextorio-default-nauvis-hexlight-color=Hex cores on [planet=nauvis] glow vividly with this color unless overridden by a circuit network.
+hextorio-default-vulcanus-hexlight-color=Hex cores on [planet=vulcanus] glow vividly with this color unless overridden by a circuit network.
+hextorio-default-fulgora-hexlight-color=Hex cores on [planet=fulgora] glow vividly with this color unless overridden by a circuit network.
+hextorio-default-gleba-hexlight-color=Hex cores on [planet=gleba] glow vividly with this color unless overridden by a circuit network.
+hextorio-default-aquilo-hexlight-color=Hex cores on [planet=aquilo] glow vividly with this color unless overridden by a circuit network.
 
 [string-mod-setting]
 hextorio-grid-rotation-mode-nauvis-random=Random
